--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ boto3 = {version = "^1.24.34", optional = true}
 ibm-watson = {version = "^6.0.0", optional = true}
 google-cloud-texttospeech = {version = "^2.11.1", optional = true}
 pyttsx3 = {version = "^2.90", optional = true}
+pyaudio = {version = "^0.2.11", optional = true}
 
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
