--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ ibm-watson = {version = "^6.0.0", optional = true}
 google-cloud-texttospeech = {version = "^2.11.1", optional = true}
 pyttsx3 = {version = "^2.90", optional = true}
 pyaudio = {version = "^0.2.11", optional = true}
+azure-cognitiveservices-speech = "^1.15.0"  # Ensure the version matches what's compatible with your package
 
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
