--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pyttsx3 = {version = "^2.90", optional = true}
 pyaudio = {version = "^0.2.11", optional = true}
 azure-cognitiveservices-speech = "^1.15.0"  # Ensure the version matches what's compatible with your package
 pythonnet = "^3.0.1"
+piper_tts = "^1.2.0"
 
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
@@ -29,8 +30,10 @@ watson = ["ibm-watson"]
 polly = ["boto3"]
 microsoft = ["azure.cognitiveservices.speech"]
 elevenlabs = ["requests"]
+witai = ["requests"]
 sapi = ["pyttsx3"]
 uwp = ["pythonnet"]
+piper =["piper_tts"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
