--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,3 +49,5 @@ filetype = "^1.0.13"
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
+[tool.poetry.scripts]
+postinstall = "scripts.install_dependencies:main"
