--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,4 @@ urllib3==1.26.10; python_version >= "3.7" and python_full_version < "3.0.0" and 
 websocket-client==1.1.0; python_version >= "3.6"
 pyttsx3==2.90
 azure-cognitiveservices-speech
+piper_tts
