migrating to winrt-runtime for stts uwp

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,18 +21,18 @@ google-cloud-texttospeech = {version = "^2.11.1", optional = true}
 pyttsx3 = {version = "^2.90", optional = true}
 pyaudio = {version = "^0.2.11", optional = true}
 azure-cognitiveservices-speech = "^1.15.0"  # Ensure the version matches what's compatible with your package
-pythonnet = "^3.0.1"
+winrt-runtime = "^3.0.1"
 piper_tts = "^1.2.0"
 
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
 watson = ["ibm-watson"]
 polly = ["boto3"]
-microsoft = ["azure.cognitiveservices.speech"]
+Microsoft = ["azure.cognitiveservices.speech"]
 elevenlabs = ["requests"]
 witai = ["requests"]
 sapi = ["pyttsx3"]
-uwp = ["pythonnet"]
+uwp = ["winrt_runtime"]
 piper =["piper_tts"]
 
 [tool.poetry.dev-dependencies]
