--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ Microsoft = ["azure.cognitiveservices.speech"]
 elevenlabs = ["requests"]
 witai = ["requests"]
 sapi = ["pyttsx3"]
-uwp = ["winrt_runtime"]
+uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","winrt_windows.foundationtime"]
 piper =["piper_tts"]
 
 [tool.poetry.dev-dependencies]
