--- a/requirements.txt
+++ b/requirements.txt
@@ -27,5 +27,7 @@ urllib3==1.26.10; python_version >= "3.7" and python_full_version < "3.0.0" and 
 websocket-client==1.1.0; python_version >= "3.6"
 pyttsx3==2.90
 azure-cognitiveservices-speech
-piper_tts
-winrt
+piper-tts
+winrt-windows.media.speechsynthesis
+winrt-windows.storage.streams
+winrt-windows.foundation
