updating dev container and name of piper tts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ pyttsx3 = {version = "^2.90", optional = true}
 pyaudio = {version = "^0.2.11", optional = true}
 azure-cognitiveservices-speech = "^1.15.0"  # Ensure the version matches what's compatible with your package
 winrt-runtime = "^2.0.1"
-piper_tts = "^1.2.0"
+piper-tts = "^1.2.0"
 
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
