--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -47,4 +47,4 @@ RUN apt-get update -y \
   git
 
 # install poetry - respects $POETRY_VERSION & $POETRY_HOME
-RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+RUN curl -sSL https://install.python-poetry.org | python -
