--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ elevenlabs = ["requests"]
 witai = ["requests"]
 sapi = ["pyttsx3"]
 uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","winrt_windows.foundationtime"]
-piper =["piper_tts"]
+piper =["piper-tts"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
