--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ urllib3==1.26.10; python_version >= "3.7" and python_full_version < "3.0.0" and 
 websocket-client==1.1.0; python_version >= "3.6"
 pyttsx3==2.90
 azure-cognitiveservices-speech
-piper-tts==1.2.0
-winrt-windows.media.speechsynthesis
-winrt-windows.storage.streams
-winrt-windows.foundation
+piper-tts==1.2.0; python_version >= "3.10"
+winrt-windows.media.speechsynthesis; sys_platform == 'win32' 
+winrt-windows.storage.streams; sys_platform == 'win32'
+winrt-windows.foundation; sys_platform == 'win32'
