--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ keywords = [ "tts", "text-to-speech", "speech synthesis", "polly", "sapi" ]
 "Bug Tracker" = "https://github.com/mediatechlab/tts-wrapper/issues"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.9,<3.13"
 requests = { version = "^2.28.0", optional = true }
 boto3 = {version = "^1.24.34", optional = true}
 ibm-watson = {version = "^6.0.0", optional = true}
@@ -21,7 +21,7 @@ google-cloud-texttospeech = {version = "^2.11.1", optional = true}
 pyttsx3 = {version = "^2.90", optional = true}
 pyaudio = {version = "^0.2.11", optional = true}
 azure-cognitiveservices-speech = "^1.15.0"  # Ensure the version matches what's compatible with your package
-winrt-runtime = "^2.0.1"
+winrt-runtime = { version = "^2.0.1", markers = "sys_platform == 'win32'" }
 piper-tts = "^1.2.0"
 
 [tool.poetry.extras]
