--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,9 @@ ibm-watson = {version = "^6.0.0", optional = true}
 google-cloud-texttospeech = {version = "^2.11.1", optional = true}
 pyttsx3 = {version = "^2.90", optional = true}
 pyaudio = {version = "^0.2.11", optional = true}
-azure-cognitiveservices-speech = "^1.15.0"  # Ensure the version matches what's compatible with your package
-winrt-runtime = { version = "^2.0.1", markers = "sys_platform == 'win32'" }
-piper-tts = "^1.2.0"
+azure-cognitiveservices-speech = {version = "^1.15.0" , optional = true}
+winrt-runtime = { version = "^2.0.1", markers = "sys_platform == 'win32'", optional = true }
+piper-tts = { version = "^1.2.0", optional = true}
 
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
