--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ google-cloud-texttospeech==2.12.0; python_version >= "3.7"
 googleapis-common-protos==1.56.4; python_version >= "3.7"
 grpcio-status==1.47.0; python_version >= "3.7"
 grpcio==1.47.0; python_version >= "3.7"
-ibm-cloud-sdk-core==3.15.3
-ibm-watson==6.0.0
+ibm-cloud-sdk-core==3.20.1
+ibm-watson==8.1.0
 idna==3.3; python_version >= "3.7" and python_version < "4"
 jmespath==1.0.1; python_version >= "3.7"
 proto-plus==1.20.6; python_version >= "3.7"
@@ -25,7 +25,7 @@ s3transfer==0.6.0; python_version >= "3.7"
 six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
 urllib3==1.26.10; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
 websocket-client==1.1.0; python_version >= "3.6"
-pyttsx3==2.90
+py3-tts==3.5
 azure-cognitiveservices-speech
 piper-tts==1.2.0; python_version >= "3.10" and sys_platform == 'linux'
 winrt-windows.media.speechsynthesis; sys_platform == 'win32' 
