--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ keywords = [ "tts", "text-to-speech", "speech synthesis", "polly", "sapi" ]
 "Bug Tracker" = "https://github.com/mediatechlab/tts-wrapper/issues"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.13"
+python = ">=3.10,<3.13"
 requests = { version = "^2.31.0", optional = true }
 boto3 = {version = "^1.34.137", optional = true}
 ibm-watson = {version = "^8.1.0", optional = true}
@@ -23,7 +23,7 @@ pyaudio = {version = "^0.2.11", optional = false}
 azure-cognitiveservices-speech = {version = "^1.15.0" , optional = true}
 winrt-runtime = { version = "^2.0.1", markers = "sys_platform == 'win32'", optional = true }
 piper-tts = { version = "^1.2.0", optional = true}
-ttsmms = { git = "https://github.com/willwade/ttsmms", rev = "main", optional = true }
+py3-ttsmms = { version = "^0.8.4", optional = true }
 
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
@@ -35,7 +35,7 @@ witai = ["requests"]
 sapi = ["pyttsx3"]
 uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","winrt_windows.foundationtime"]
 piper =["piper-tts"]
-mms = ["ttsmms"]
+mms = ["py3-ttsmms"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
