--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,109 @@
-boto3==1.34.137; python_version >= "3.7"
-botocore==1.34.137; python_version >= "3.7"
-cachetools==5.2.0; python_version >= "3.7" and python_version < "4.0" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
-certifi==2024.6.2; python_version >= "3.7" and python_version < "4"
-charset-normalizer==2.1.0; python_version >= "3.7" and python_version < "4" and python_full_version >= "3.6.0"
-google-api-core==2.19.1; python_version >= "3.7"
-google-auth==2.31.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
-google-cloud-texttospeech==2.12.0; python_version >= "3.7"
-googleapis-common-protos==1.56.4; python_version >= "3.7"
-grpcio-status==1.47.0; python_version >= "3.7"
-grpcio==1.47.0; python_version >= "3.7"
-ibm-cloud-sdk-core==3.20.1
-ibm-watson==8.1.0
-idna==3.3; python_version >= "3.7" and python_version < "4"
-jmespath==1.0.1; python_version >= "3.7"
-proto-plus==1.22.3; python_version >= "3.7"
-protobuf==3.19.5; python_version >= "3.7"
-pyasn1-modules==0.2.8; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
-pyasn1==0.4.8; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7") or python_full_version >= "3.6.0" and python_version >= "3.7" and python_version < "4" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
-pyjwt==2.8.0; python_version >= "3.6"
-python-dateutil==2.8.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
-requests==2.31.0; python_version >= "3.7" and python_version < "4"
-rsa==4.9; python_version >= "3.6" and python_version < "4" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
-s3transfer==0.10.2; python_version >= "3.7"
-six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
-urllib3==2.1.0; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
-websocket-client==1.1.0; python_version >= "3.6"
-py3-tts==3.5
-azure-cognitiveservices-speech
-piper-tts==1.2.0; python_version >= "3.10" and sys_platform == 'linux'
-winrt-windows.media.speechsynthesis; sys_platform == 'win32' 
-winrt-windows.storage.streams; sys_platform == 'win32'
-winrt-windows.foundation; sys_platform == 'win32'
-git+https://github.com/willwade/ttsmms#egg=ttsmms
+attrs==23.2.0 ; python_version >= "3.10" and python_version < "3.13"
+audioread==3.0.1 ; python_version >= "3.10" and python_version < "3.13"
+azure-cognitiveservices-speech==1.38.0 ; python_version >= "3.10" and python_version < "3.13"
+babel==2.15.0 ; python_version >= "3.10" and python_version < "3.13"
+bibtexparser==2.0.0b7 ; python_version >= "3.10" and python_version < "3.13"
+boto3==1.34.140 ; python_version >= "3.10" and python_version < "3.13"
+botocore==1.34.140 ; python_version >= "3.10" and python_version < "3.13"
+cachetools==5.3.3 ; python_version >= "3.10" and python_version < "3.13"
+certifi==2024.7.4 ; python_version >= "3.10" and python_version < "3.13"
+cffi==1.16.0 ; python_version >= "3.10" and python_version < "3.13"
+charset-normalizer==3.3.2 ; python_version >= "3.10" and python_version < "3.13"
+clldutils==3.22.2 ; python_version >= "3.10" and python_version < "3.13"
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "3.13"
+coloredlogs==15.0.1 ; python_version >= "3.10" and python_version < "3.13"
+colorlog==6.8.2 ; python_version >= "3.10" and python_version < "3.13"
+csvw==3.3.0 ; python_version >= "3.10" and python_version < "3.13"
+cython==3.0.10 ; python_version >= "3.10" and python_version < "3.13"
+decorator==5.1.1 ; python_version >= "3.10" and python_version < "3.13"
+dlinfo==1.2.1 ; python_version >= "3.10" and python_version < "3.13"
+filelock==3.15.4 ; python_version >= "3.10" and python_version < "3.13"
+flatbuffers==24.3.25 ; python_version >= "3.10" and python_version < "3.13"
+fsspec==2024.6.1 ; python_version >= "3.10" and python_version < "3.13"
+google-api-core[grpc]==2.19.1 ; python_version >= "3.10" and python_version < "3.13"
+google-auth==2.31.0 ; python_version >= "3.10" and python_version < "3.13"
+google-cloud-texttospeech==2.16.3 ; python_version >= "3.10" and python_version < "3.13"
+googleapis-common-protos==1.63.2 ; python_version >= "3.10" and python_version < "3.13"
+grpcio-status==1.62.2 ; python_version >= "3.10" and python_version < "3.13"
+grpcio==1.64.1 ; python_version >= "3.10" and python_version < "3.13"
+humanfriendly==10.0 ; python_version >= "3.10" and python_version < "3.13"
+ibm-cloud-sdk-core==3.20.1 ; python_version >= "3.10" and python_version < "3.13"
+ibm-watson==8.1.0 ; python_version >= "3.10" and python_version < "3.13"
+idna==3.7 ; python_version >= "3.10" and python_version < "3.13"
+intel-openmp==2021.4.0 ; python_version >= "3.10" and python_version < "3.13" and platform_system == "Windows"
+isodate==0.6.1 ; python_version >= "3.10" and python_version < "3.13"
+jinja2==3.1.4 ; python_version >= "3.10" and python_version < "3.13"
+jmespath==1.0.1 ; python_version >= "3.10" and python_version < "3.13"
+joblib==1.4.2 ; python_version >= "3.10" and python_version < "3.13"
+jsonschema-specifications==2023.12.1 ; python_version >= "3.10" and python_version < "3.13"
+jsonschema==4.22.0 ; python_version >= "3.10" and python_version < "3.13"
+language-tags==1.2.0 ; python_version >= "3.10" and python_version < "3.13"
+lazy-loader==0.4 ; python_version >= "3.10" and python_version < "3.13"
+librosa==0.10.2.post1 ; python_version >= "3.10" and python_version < "3.13"
+llvmlite==0.43.0 ; python_version >= "3.10" and python_version < "3.13"
+lxml==5.2.2 ; python_version >= "3.10" and python_version < "3.13"
+markdown==3.6 ; python_version >= "3.10" and python_version < "3.13"
+markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "3.13"
+mkl==2021.4.0 ; python_version >= "3.10" and python_version < "3.13" and platform_system == "Windows"
+monotonic-align==1.0.0 ; python_version >= "3.10" and python_version < "3.13"
+mpmath==1.3.0 ; python_version >= "3.10" and python_version < "3.13"
+msgpack==1.0.8 ; python_version >= "3.10" and python_version < "3.13"
+networkx==3.3 ; python_version >= "3.10" and python_version < "3.13"
+numba==0.60.0 ; python_version >= "3.10" and python_version < "3.13"
+numpy==1.26.4 ; python_version >= "3.10" and python_version < "3.13"
+nvidia-cublas-cu12==12.1.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
+nvidia-cuda-cupti-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
+nvidia-cuda-nvrtc-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
+nvidia-cuda-runtime-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
+nvidia-cudnn-cu12==8.9.2.26 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
+nvidia-cufft-cu12==11.0.2.54 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
+nvidia-curand-cu12==10.3.2.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
+nvidia-cusolver-cu12==11.4.5.107 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
+nvidia-cusparse-cu12==12.1.0.106 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
+nvidia-nccl-cu12==2.20.5 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
+nvidia-nvjitlink-cu12==12.5.82 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
+nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "3.13"
+onnxruntime==1.18.1 ; python_version >= "3.10" and python_version < "3.13"
+packaging==24.1 ; python_version >= "3.10" and python_version < "3.13"
+phonemizer==3.2.1 ; python_version >= "3.10" and python_version < "3.13"
+piper-phonemize==1.1.0 ; python_version >= "3.10" and python_version < "3.13"
+piper-tts==1.2.0 ; python_version >= "3.10" and python_version < "3.13"
+platformdirs==4.2.2 ; python_version >= "3.10" and python_version < "3.13"
+pooch==1.8.2 ; python_version >= "3.10" and python_version < "3.13"
+proto-plus==1.24.0 ; python_version >= "3.10" and python_version < "3.13"
+protobuf==4.25.3 ; python_version >= "3.10" and python_version < "3.13"
+py3-ttsmms==0.8.4 ; python_version >= "3.10" and python_version < "3.13"
+pyasn1-modules==0.4.0 ; python_version >= "3.10" and python_version < "3.13"
+pyasn1==0.6.0 ; python_version >= "3.10" and python_version < "3.13"
+pyaudio==0.2.14 ; python_version >= "3.10" and python_version < "3.13"
+pycparser==2.22 ; python_version >= "3.10" and python_version < "3.13"
+pyjwt==2.8.0 ; python_version >= "3.10" and python_version < "3.13"
+pylatexenc==2.10 ; python_version >= "3.10" and python_version < "3.13"
+pyparsing==3.1.2 ; python_version >= "3.10" and python_version < "3.13"
+pyreadline3==3.4.1 ; sys_platform == "win32" and python_version >= "3.10" and python_version < "3.13"
+python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "3.13"
+rdflib==7.0.0 ; python_version >= "3.10" and python_version < "3.13"
+referencing==0.35.1 ; python_version >= "3.10" and python_version < "3.13"
+regex==2024.5.15 ; python_version >= "3.10" and python_version < "3.13"
+requests==2.32.2 ; python_version >= "3.10" and python_version < "3.13"
+rfc3986==1.5.0 ; python_version >= "3.10" and python_version < "3.13"
+rpds-py==0.18.1 ; python_version >= "3.10" and python_version < "3.13"
+rsa==4.9 ; python_version >= "3.10" and python_version < "3.13"
+s3transfer==0.10.2 ; python_version >= "3.10" and python_version < "3.13"
+scikit-learn==1.5.1 ; python_version >= "3.10" and python_version < "3.13"
+scipy==1.14.0 ; python_version >= "3.10" and python_version < "3.13"
+segments==2.2.1 ; python_version >= "3.10" and python_version < "3.13"
+six==1.16.0 ; python_version >= "3.10" and python_version < "3.13"
+soundfile==0.12.1 ; python_version >= "3.10" and python_version < "3.13"
+soxr==0.3.7 ; python_version >= "3.10" and python_version < "3.13"
+sympy==1.12.1 ; python_version >= "3.10" and python_version < "3.13"
+tabulate==0.9.0 ; python_version >= "3.10" and python_version < "3.13"
+tbb==2021.13.0 ; python_version >= "3.10" and python_version < "3.13" and platform_system == "Windows"
+threadpoolctl==3.5.0 ; python_version >= "3.10" and python_version < "3.13"
+torch==2.3.1 ; python_version >= "3.10" and python_version < "3.13"
+triton==2.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version < "3.12" and python_version >= "3.10"
+typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "3.13"
+unidecode==1.3.8 ; python_version >= "3.10" and python_version < "3.13"
+uritemplate==4.1.1 ; python_version >= "3.10" and python_version < "3.13"
+urllib3==2.2.2 ; python_version >= "3.10" and python_version < "3.13"
+websocket-client==1.8.0 ; python_version >= "3.10" and python_version < "3.13"
