--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -8,11 +8,11 @@ jobs:
     strategy:
       matrix:
         include:
-          - { os: ubuntu-latest, python: "3.8" }
-          - { os: ubuntu-latest, python: "3.9" }
           - { os: ubuntu-latest, python: "3.10" }
           - { os: windows-latest, python: "3.10" }
-    defaults:
+          - { os: windows-latest, python: "3.11" }
+          - { os: windows-latest, python: "3.12" }
+          defaults:
       run:
         shell: bash
     steps:
@@ -95,6 +95,6 @@ jobs:
           python-version: "3.10"
       - name: Install the lib
         run: |
-          pip install tts_wrapper[google,watson,microsoft,polly,sapi]
+          pip install tts_wrapper[google,watson,microsoft,polly,sapi,mms,witai,elevenlabs]
       - name: Test the lib
         run: python -c 'import tts_wrapper'
