--- a/requirements.txt
+++ b/requirements.txt
@@ -66,8 +66,8 @@ nvidia-nvtx-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == 
 onnxruntime==1.18.1 ; python_version >= "3.10" and python_version < "3.13"
 packaging==24.1 ; python_version >= "3.10" and python_version < "3.13"
 phonemizer==3.2.1 ; python_version >= "3.10" and python_version < "3.13"
-piper-phonemize==1.1.0 ; python_version >= "3.10" and python_version < "3.13"
-piper-tts==1.2.0 ; python_version >= "3.10" and python_version < "3.13"
+#piper-phonemize==1.1.0 ; python_version >= "3.10" and python_version < "3.13"
+#piper-tts==1.2.0 ; python_version >= "3.10" and python_version < "3.13"
 platformdirs==4.2.2 ; python_version >= "3.10" and python_version < "3.13"
 pooch==1.8.2 ; python_version >= "3.10" and python_version < "3.13"
 proto-plus==1.24.0 ; python_version >= "3.10" and python_version < "3.13"
