updating requirements and watson websocket optional

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,12 +27,12 @@ py3-ttsmms = { version = "^0.8.25", optional = true }
 
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
-watson = ["ibm-watson"]
+watson = ["ibm-watson", "websocket"]
 polly = ["boto3"]
 Microsoft = ["azure.cognitiveservices.speech"]
 elevenlabs = ["requests"]
 witai = ["requests"]
-sapi = ["pyttsx3"]
+sapi = ["py3-tts"]
 uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","winrt_windows.foundationtime"]
 piper =["piper-tts"]
 mms = ["py3-ttsmms"]
