--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ azure-cognitiveservices-speech = {version = "^1.15.0" , optional = true}
 winrt-runtime = { version = "^2.0.1", markers = "sys_platform == 'win32'", optional = true }
 piper-tts = { version = "^1.2.0", optional = true}
 py3-ttsmms = { version = "^0.8.25", optional = true }
+sherpa-onnx ={ version = "^1.10.17", optional = true }
 
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
@@ -36,6 +37,7 @@ sapi = ["py3-tts"]
 uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","winrt_windows.foundationtime"]
 piper =["piper-tts"]
 mms = ["py3-ttsmms"]
+sherpaonnx = ["sherpa-onnx"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
