--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ sherpa-onnx ={ version = "^1.10.17", optional = true }
 
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
-watson = ["ibm-watson", "websocket"]
+watson = ["ibm-watson", "websocket", "requests"]
 polly = ["boto3"]
 Microsoft = ["azure.cognitiveservices.speech"]
 elevenlabs = ["requests"]
@@ -37,7 +37,7 @@ sapi = ["py3-tts"]
 uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","winrt_windows.foundationtime"]
 piper =["piper-tts"]
 mms = ["py3-ttsmms"]
-sherpaonnx = ["sherpa-onnx"]
+sherpaonnx = ["sherpa-onnx", "requests"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
