--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ keywords = [ "tts", "text-to-speech", "speech synthesis", "polly", "sapi" ]
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 requests = { version = "^2.31.0", optional = true }
+numpy = {version ="^2.0.1", optional = true}
 boto3 = {version = "^1.34.137", optional = true}
 ibm-watson = {version = "^8.1.0", optional = true}
 google-cloud-texttospeech = {version = "^2.12.0", optional = true}
@@ -31,7 +32,7 @@ google = ["google-cloud-texttospeech"]
 watson = ["ibm-watson", "websocket", "requests"]
 polly = ["boto3"]
 Microsoft = ["azure.cognitiveservices.speech"]
-elevenlabs = ["requests"]
+elevenlabs = ["requests","numpy"]
 witai = ["requests"]
 sapi = ["py3-tts"]
 uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","winrt_windows.foundationtime"]
