--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ winrt-runtime = { version = "^2.0.1", markers = "sys_platform == 'win32'", optio
 piper-tts = { version = "^1.2.0", optional = true}
 py3-ttsmms = { version = "^0.8.25", optional = true }
 sherpa-onnx ={ version = "^1.10.17", optional = true }
+gTTS={ version = "^2.5.2", optional = true }
+ffmpeg-python={ version = "^0.2.0", optional = true }
 
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
@@ -39,6 +41,7 @@ uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","wi
 piper =["piper-tts"]
 mms = ["py3-ttsmms", "numpy"]
 sherpaonnx = ["sherpa-onnx", "requests"]
+googleTrans = ["gTTS","ffmpeg-python"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
