--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ piper-tts = { version = "^1.2.0", optional = true}
 py3-ttsmms = { version = "^0.8.25", optional = true }
 sherpa-onnx ={ version = "^1.10.17", optional = true }
 gTTS={ version = "^2.5.2", optional = true }
-ffmpeg-python={ version = "^0.2.0", optional = true }
+pydub={ version = "^0.25.1", optional = true }
 
 [tool.poetry.extras]
 google = ["google-cloud-texttospeech"]
@@ -41,7 +41,7 @@ uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","wi
 piper =["piper-tts"]
 mms = ["py3-ttsmms", "numpy"]
 sherpaonnx = ["sherpa-onnx", "requests"]
-googleTrans = ["gTTS","ffmpeg-python"]
+googleTrans = ["gTTS","pydub"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
