--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -18,13 +18,21 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install system dependencies on Linux
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y portaudio19-dev
+
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2.0.0
         with:
           poetry-version: "1.1.11"
 
       - name: Install dependencies
-        run: poetry install
+        run: |
+          poetry install
+          poetry run postinstall 
 
       - name: Lint with flake8
         run: |
@@ -83,6 +91,13 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Install system dependencies on Linux
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y portaudio19-dev
+
+          
       - name: Install poetry
         uses: abatilo/actions-poetry@v2.0.0
         with:
