--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","wi
 piper =["piper-tts"]
 mms = ["py3-ttsmms", "numpy"]
 sherpaonnx = ["sherpa-onnx", "requests"]
-googleTrans = ["gTTS","pydub"]
+googletrans = ["gTTS","pydub"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
