--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          poetry install
+          poetry install --all-extras 
           poetry run postinstall 
 
       - name: Lint with flake8
@@ -97,7 +97,6 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y portaudio19-dev
 
-          
       - name: Install poetry
         uses: abatilo/actions-poetry@v2.0.0
         with:
@@ -105,7 +104,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          poetry install
+          poetry install --all-extras 
           poetry run postinstall 
 
       - name: Test with pytest
