--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          poetry install --all-extras 
+          poetry install -E google -E watson -E polly -E microsoft -E googletrans -E witai -E elevenlabs
           poetry run postinstall 
 
       - name: Lint with flake8
@@ -104,7 +104,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          poetry install --all-extras 
+          poetry install -E google -E watson -E polly -E microsoft -E googletrans -E witai -E elevenlabs
           poetry run postinstall 
 
       - name: Test with pytest
