--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -29,6 +29,11 @@ jobs:
         run: |
           brew install portaudio ffmpeg
 
+      - name: Install six (required for Poetry with Python 3.12)
+        if: matrix.python-version == '3.12'
+        run: |
+          python -m pip install six
+
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2.0.0
         with:
