--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2.0.0
         with:
-          poetry-version: "1.1.11"  # Replace with your local Poetry version
+          poetry-version: "1.8.3"  
 
       - name: Install six (required for Poetry with Python 3.12)
         if: matrix.python-version == '3.12'
