--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ mypy = "^0.971"
 types-boto3 = "^1.0.2"
 pytest-cov = "^3.0.0"
 filetype = "^1.0.13"
+setuptools = "^65.5.0" 
 
 [build-system]
 requires = ["poetry>=0.12"]
