--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -34,6 +34,10 @@ jobs:
         with:
           poetry-version: "1.8.3"  
 
+      - name: Install build tools (setuptools and wheel)
+        run: |
+          python -m pip install setuptools wheel
+          
       - name: Install six (required for Poetry with Python 3.12)
         if: matrix.python-version == '3.12'
         run: |
