--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -36,8 +36,8 @@ jobs:
 
       - name: Install build tools (setuptools and wheel)
         run: |
-          python -m pip install setuptools wheel
-          
+          python -m pip install --upgrade pip setuptools wheel
+
       - name: Install six (required for Poetry with Python 3.12)
         if: matrix.python-version == '3.12'
         run: |
@@ -45,6 +45,7 @@ jobs:
 
       - name: Update package index and install dependencies
         run: |
+          poetry run pip install --upgrade pip setuptools wheel
           poetry install --with dev -E google -E watson -E polly -E microsoft -E googletrans -E witai -E elevenlabs
           poetry run postinstall
 
