--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.10", "3.11", "3.12"]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -32,20 +32,10 @@ jobs:
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2.0.0
         with:
-          poetry-version: "1.8.3"  
-
-      - name: Install build tools (setuptools and wheel)
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-
-      - name: Install six (required for Poetry with Python 3.12)
-        if: matrix.python-version == '3.12'
-        run: |
-          python -m pip install six
+          poetry-version: "1.8.3"
 
       - name: Update package index and install dependencies
         run: |
-          poetry run pip install --upgrade pip setuptools wheel numpy
           poetry install --with dev -E google -E watson -E polly -E microsoft -E googletrans -E witai -E elevenlabs
           poetry run postinstall
 
@@ -98,4 +88,3 @@ jobs:
 
       - name: Test with pytest
         run: poetry run make tests
-
