--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -36,7 +36,8 @@ jobs:
 
       - name: Update package index and install dependencies
         run: |
-          poetry install --with dev -E google -E watson -E polly -E microsoft -E googletrans -E witai -E elevenlabs
+          poetry install --with dev 
+          poetry install -E google -E watson -E polly -E microsoft -E googletrans -E witai -E elevenlabs
           poetry run postinstall
 
       - name: Set environment variables and create Google credentials file on Windows
