--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,13 @@ keywords = [ "tts", "text-to-speech", "speech synthesis", "polly", "sapi", "mms"
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 requests = { version = "^2.31.0", optional = true }
-numpy = {version ="1.24.3", optional = true}
+numpy = { version = "^2.0.1",  optional = true }
 boto3 = {version = "^1.34.137", optional = true}
 ibm-watson = {version = "^8.1.0", optional = true}
 google-cloud-texttospeech = {version = "^2.12.0", optional = true}
 py3-tts = {version = "^3.5", optional = true}
 pyaudio = {version = "^0.2.11", optional = false}
-azure-cognitiveservices-speech = {version = "^1.15.0" , optional = true}
+azure-cognitiveservices-speech = {version = "^1.15.0",  optional = true}
 winrt-runtime = { version = "^2.0.1", markers = "sys_platform == 'win32'", optional = true }
 piper-tts = { version = "^1.2.0", optional = true}
 sherpa-onnx ={ version = "^1.10.17", optional = true }
@@ -50,7 +50,8 @@ mypy = "^0.971"
 types-boto3 = "^1.0.2"
 pytest-cov = "^3.0.0"
 filetype = "^1.0.13"
-setuptools = "^65.5.0" 
+wheel = "^0.43.0"
+setuptools = "^71.1.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
