--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -3,12 +3,12 @@ name: Build, Test, and Publish
 on:
   push:
     branches:
-      - main
+      - master
     tags:
       - 'v*.*.*'
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build-and-test:
