--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 repository = "https://github.com/willwade/tts-wrapper"
 documentation = "https://github.com/willwade/tts-wrapper"
 keywords = [ "tts", "text-to-speech", "speech synthesis", "polly", "sapi", "mms", "gTTS", "witai", "elevenlabs" ]
+packages = [{include = "tts_wrapper"}]
 
 [tool.poetry.urls]
 "Bug Tracker" = "https://github.com/willwade/tts-wrapper/issues"
