add setuptools. i domt understand why -with dev not working

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -44,6 +44,8 @@ jobs:
 
       - name: Update package index and install dependencies
         run: |
+          pip install --upgrade pip setuptools wheel
+          poetry run pip install --upgrade pip setuptools wheel
           poetry install --with dev 
           poetry install -E google -E watson -E polly -E microsoft -E googletrans -E witai -E elevenlabs
           poetry run postinstall
