--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -27,7 +27,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Cache dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
             ~/.cache/pypoetry
@@ -82,7 +82,7 @@ jobs:
           }
           [System.Convert]::FromBase64String($env:GOOGLE_SA_FILE_B64) | Set-Content -Path $env:GOOGLE_SA_PATH -AsByteStream
           # run all tests with coverage
-          poetry run pytest --cov=tts_wrapper
+          poetry run pytest --cov=tts_wrapper -m "not synthetic"
 
       - name: Set environment variables and create Google credentials file on Unix-based systems
         if: matrix.os != 'windows-latest'
@@ -104,7 +104,7 @@ jobs:
           mkdir -p $(dirname "$GOOGLE_SA_PATH")
           echo "$GOOGLE_SA_FILE_B64" | base64 --decode > "$GOOGLE_SA_PATH"
           # run all tests with coverage
-          poetry run pytest --cov=tts_wrapper
+          poetry run pytest --cov=tts_wrapper -m "not synthetic"
 
       - name: Run all tests with Makefile
         env:
@@ -127,7 +127,7 @@ jobs:
         run: poetry build
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: dist-${{ matrix.os }}-${{ matrix.python-version }}
           path: dist/*
@@ -138,10 +138,10 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
